------------------------------------------------------------------------
r2082 | gaser | 2022-08-11 16:03:51

Changed paths:
 M CHANGES.txt
 M Makefile
 M cat_surf_results.m
AM cat_vol_glass.m
 M cat_vol_img2mip.m
 M cat_vol_slice_overlay.m
A  glass_brain.mat


Added:   Added new function cat_vol_glass.m to visualize glassbrain using a 
         modified version of spm_glass.
Changed: Modified cat_vol_img2mip.m to support cat_vol_glass.m.
Changed: Added OV to output argument in cat_vol_slice_overlay.m to allow
         to update OV fields such as OV.slices_str.
Changed: Some changes to cat_surf_results.m to consider new functionality.
------------------------------------------------------------------------
r2081 | gaser | 2022-08-11 12:11:50

Changed paths:
 M CHANGES.txt
 M cat12.m
 M cat_surf_results.m
 M cat_vol_img2mip.m
 M cat_vol_slice_overlay.m


Changed: Many more changes to cat_surf_results.m, cat_vol_img2mip.m, 
         cat_vol_slice_overlay.m to provide consistency 
         between all displays.
------------------------------------------------------------------------
r2079 | gaser | 2022-08-10 15:15:09

Changed paths:
 M CHANGES.txt
 M cat_surf_results.m
 M cat_vol_img2mip.m
 M cat_vol_slice_overlay.m
 M slice_overlay.m


Changed: Many more changes to cat_surf_results.m, cat_vol_img2mip.m, 
         cat_vol_slice_overlay.m and slice_overlay.m to provide consistency 
         between all displays.
------------------------------------------------------------------------
r2078 | rdahnke | 2022-08-10 15:27:07

Changed paths:
 M CHANGES.txt
 M cat_conf_tools.m
 M cat_run.m


1) Fixed:    Tiny corrections in cat_run.
2) New:      Added imcalc batch to run the same operation on multiple subjects. 
------------------------------------------------------------------------
r2077 | rdahnke | 2022-08-10 11:38:50

Changed paths:
 M .gitignore
 M CHANGES.txt
 M cat_parallelize.m
 M cat_run.m

